# Flow-Bot-AI

./: .env.example  .gitignore  README.md  desktop_dashboard_launcher.py  pyproject.toml
daytrading_bot/: __init__.py  backtest.py  calibration.py  cli.py  config.py  dashboard.py  dashboard_app.py  device_bootstrap.py  device_reports.py  diagnostics.py  engine.py  execution.py  fast_research_lab.py  history.py  indicators.py  kraken.py  live.py  models.py  personal_journal.py  reporting.py  research.py  risk.py  runtime_layout.py  sessions.py  shadow_portfolios.py  signal_observatory.py  storage.py  strategy.py  strategy_lab.py  telemetry.py  workflows.py
reports/devices/block30/: latest.json  latest.md
scripts/: bootstrap_device.ps1  e2e_verify.py  register_supervisor_watchdog_task.ps1  run_monitor_dashboard.cmd  run_supervisor_watchdog.cmd  start_monitor_dashboard.ps1  start_monitor_dashboard_desktop.ps1  start_supervisor_watchdog.ps1
tests/: helpers.py  test_backtest.py  test_calibration.py  test_cli_contracts.py  test_config.py  test_dashboard.py  test_dashboard_app.py  test_desktop_dashboard_launcher.py  test_device_bootstrap.py  test_device_reports.py  test_diagnostics.py  test_e2e_safety.py  test_engine.py  test_execution.py  test_fast_research_lab.py  test_kraken.py  test_live.py  test_personal_journal.py  test_reporting.py  test_research.py  test_risk.py  test_runtime_layout.py  test_sessions.py  test_shadow_portfolios.py  test_signal_observatory.py  test_storage.py  test_strategy.py  test_strategy_lab.py  test_workflows.py
