[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daytrading-bot"
version = "0.1.0"
description = "Intraday day-trading bot for Kraken Spot with 3Commas Signal Bot execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["websockets>=16,<17"]
license = { text = "MIT" }
authors = [{ name = "Codex" }]

[tool.setuptools.packages.find]
include = ["daytrading_bot*"]
